# nsu_matlab_on_python

./: .gitignore  CMakeLists.txt  requirements.txt
lissagy/: main.py
planets/: Motion_with_additive.m  determination_of_motion_parameters.m  motion_with_interaction.m  thelAwkepler.m
